# handlers/handlers.go
@@ -7,9 +7,10 @@ import (
 	"net/http"
 	"sync"
 
+	"github.com/gorilla/mux"
 	"github.com/fatih/color"
 	"github.com/gocolly/colly"
-	"pipebomb/logging"
+	"pipebomb/profiles"
 	"pipebomb/film"
 	"pipebomb/show"
 )
@@ -24,11 +25,8 @@ import (
 // @Router /series/vip/sources [get]
 func FetchShowSources(w http.ResponseWriter, r *http.Request) {
 	serverID := r.URL.Query().Get("id")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
 
-	sources, err := show.GetShowSources(serverID, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	sources, err := show.GetShowSources(serverID)
 	if err != nil {
 		http.Error(w, "Error fetching show sources", http.StatusInternalServerError)
 		return }
@@ -50,11 +48,8 @@ func FetchShowSources(w http.ResponseWriter, r *http.Request) {
 // @Router /films/vip/sources [get]
 func FetchFilmSources(w http.ResponseWriter, r *http.Request) {
 	serverID := r.URL.Query().Get("id")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
 
-	sources, err := film.GetFilmSources(serverID, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	sources, err := film.GetFilmSources(serverID)
 	if err != nil {
 		http.Error(w, "Error fetching film sources", http.StatusInternalServerError)
 		return }
@@ -76,11 +71,7 @@ func FetchFilmSources(w http.ResponseWriter, r *http.Request) {
 // @Router /films/vip/servers [get]
 func FetchFilms(w http.ResponseWriter, r *http.Request) {
 	filmID := r.URL.Query().Get("id")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
-
-	servers, err := film.GetFilmServer(filmID, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	servers, err := film.GetFilmServer(filmID)
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
@@ -102,7 +93,7 @@ func FetchFilms(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func searchFilms(query, reqType, remoteAddress, reqPath, reqQueryParams string) (interface{}, error) {
+func searchFilms(query string) (interface{}, error) {
 	visitedLinks := sync.Map{}
 	c := colly.NewCollector()
 
@@ -115,7 +106,6 @@ func searchFilms(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 		}
 	})
 
-	fmt.Println(color.GreenString(logging.HttpLogger()[0] + ":"), color.HiWhiteString(" %s - '%s %s?%s'", remoteAddress, reqType, reqPath, reqQueryParams))
 	err := c.Visit("https://flixhq.to/search/" + query)
 	if err != nil {
 		return nil, err
@@ -135,11 +125,8 @@ func searchFilms(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 // @Router /films/vip/search [get]
 func FilmSearch(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query().Get("q")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
 
-	results, _ := searchFilms(query, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	results, _ := searchFilms(query)
 
 	jsonResponse := map[string]interface{}{
 		"results": results,
@@ -161,7 +148,7 @@ func FilmSearch(w http.ResponseWriter, r *http.Request) {
 }
 
 
-func searchShows(query, reqType, remoteAddress, reqPath, reqQueryParams string) (interface{}, error) {
+func searchShows(query string) (interface{}, error) {
 	visitedLinks := sync.Map{}
 	c := colly.NewCollector()
 
@@ -174,7 +161,6 @@ func searchShows(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 		}
 	})
 
-	fmt.Println(color.GreenString(logging.HttpLogger()[0] + ":"), color.HiWhiteString(" %s - '%s %s?%s'", remoteAddress, reqType, reqPath, reqQueryParams))
 	err := c.Visit("https://flixhq.to/search/" + query)
 	if err != nil {
 		return nil, err
@@ -193,11 +179,8 @@ func searchShows(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 // @Router /series/vip/search [get]
 func ShowSearch(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query().Get("q")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
-
-	results, _ := searchShows(query, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	
+	results, _ := searchShows(query)
 
 	jsonResponse := map[string]interface{}{
 		"results": results,
@@ -218,7 +201,7 @@ func ShowSearch(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func showSeasons(query, reqType, remoteAddress, reqPath, reqQueryParams string) (map[string]show.ShowSeason, error) {
+func showSeasons(query string) (map[string]show.ShowSeason, error) {
 	response, err := show.GetShowSeason(query)
 	if err != nil {
 		return nil, err
@@ -227,8 +210,6 @@ func showSeasons(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 	for _, season := range response {
 		seasonsMap[season.SeasonName] = season
 	}
-
-	fmt.Println(color.GreenString(logging.HttpLogger()[0] + ":"), color.HiWhiteString(" %s - '%s %s?%s'", remoteAddress, reqType, reqPath, reqQueryParams))
 
 	return seasonsMap, nil
 }
@@ -244,11 +225,8 @@ func showSeasons(query, reqType, remoteAddress, reqPath, reqQueryParams string) 
 // @Router /series/vip/seasons [get]
 func ShowSeason(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query().Get("id")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
 
-	results, _ := showSeasons(query, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	results, _ := showSeasons(query)
 
 	responseBytes, err := json.Marshal(results)
 	if err != nil {
@@ -275,11 +253,8 @@ func ShowSeason(w http.ResponseWriter, r *http.Request) {
 // @Router /series/vip/servers [get]
 func FetchShows(w http.ResponseWriter, r *http.Request) {
 	filmID := r.URL.Query().Get("id")
-	reqType := r.Method
-	remoteAddress := r.RemoteAddr
-	reqUrl := r.URL
 
-	servers, err := show.GetShowServer(filmID, reqType, remoteAddress, reqUrl.Path, reqUrl.RawQuery)
+	servers, err := show.GetShowServer(filmID)
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
@@ -299,6 +274,152 @@ func FetchShows(w http.ResponseWriter, r *http.Request) {
 		fmt.Println("error writing response for film servers: ", s)
 		return
 	}
+}
+
+
+// @Summary     Get all users
+// @Description Retrieve a list of all users
+// @ID              get-users
+// @Tags Users
+// @Produce     json
+// @Success     200 {array} profiles.User
+// @Router          /users [get]
+func GetUsers(w http.ResponseWriter, r *http.Request) {
+    color.Green("GET request received for all users")
+    w.Header().Set("Content-Type", "application/json")
+    json.NewEncoder(w).Encode(profiles.Users)
+}
+
+// @Summary     Create a new user
+// @Description Create a new user with the given data
+// @ID              create-user
+// @Tags Users
+// @Accept          json
+// @Produce     json
+// @Param           user    body        profiles.User    true    "User to be created"
+// @Success     200     {object}    profiles.User
+// @Router          /users [post]
+func CreateUser(w http.ResponseWriter, r *http.Request) {
+    color.Cyan("POST request received to create a new user")
+    w.Header().Set("Content-Type", "application/json")
+    var user profiles.User
+    err := json.NewDecoder(r.Body).Decode(&user)
+    if err != nil {
+        http.Error(w, err.Error(), http.StatusBadRequest)
+        return
+    }
+    profiles.Users = append(profiles.Users, user)
+    profiles.SaveUsers()
+    json.NewEncoder(w).Encode(user)
+}
+
+// @Summary     Get a specific user
+// @Description Retrieve a user by their username
+// @ID              get-user
+// @Tags Users
+// @Produce     json
+// @Param           username    path        string  true    "Username of the user to be fetched"
+// @Success     200         {object}    profiles.User
+// @Failure     404         "User not found"
+// @Router          /users/{username} [get]
+func GetUser(w http.ResponseWriter, r *http.Request) {
+    color.Yellow("GET request received for a specific user")
+    w.Header().Set("Content-Type", "application/json")
+    params := mux.Vars(r)
+    username := params["username"]
+    for _, user := range profiles.Users {
+        if user.Username == username {
+            json.NewEncoder(w).Encode(user)
+            return
+        }
+    }
+    http.NotFound(w, r)
+}
+
+// @Summary     Update a user
+// @Description Update a user's data by their username
+// @ID              update-user
+// @Tags Users
+// @Accept          json
+// @Produce     json
+// @Param           username    path        string  true    "Username of the user to be updated"
+// @Param           updatedUser body        profiles.User    true    "Updated user data"
+// @Success     200         {object}    profiles.User
+// @Failure     404         "User not found"
+// @Router          /users/{username} [put]
+func UpdateUser(w http.ResponseWriter, r *http.Request) {
+    color.Magenta("PUT request received to update a user")
+    w.Header().Set("Content-Type", "application/json")
+    params := mux.Vars(r)
+    username := params["username"]
+    for i, user := range profiles.Users {
+        if user.Username == username {
+            var updatedUser profiles.User
+            err := json.NewDecoder(r.Body).Decode(&updatedUser)
+            if err != nil {
+                http.Error(w, err.Error(), http.StatusBadRequest)
+                return
+            }
+
+            // Merge the updated fields with the existing user data
+            if updatedUser.Username != "" {
+                user.Username = updatedUser.Username
+            }
+            if updatedUser.Avatar != "" {
+                user.Avatar = updatedUser.Avatar
+            }
+            profile := &user.Profile
+            updatedProfile := &updatedUser.Profile
+            if updatedProfile.Name != "" {
+                profile.Name = updatedProfile.Name
+            }
+            if updatedProfile.Image != "" {
+                profile.Image = updatedProfile.Image
+            }
+            if updatedProfile.Bio != "" {
+                profile.Bio = updatedProfile.Bio
+            }
+            if updatedProfile.Philosophy != "" {
+                profile.Philosophy = updatedProfile.Philosophy
+            }
+
+            profiles.Users[i] = user
+            profiles.SaveUsers()
+            json.NewEncoder(w).Encode(user)
+            return
+        }
+    }
+    http.NotFound(w, r)
+}
+
+// @Summary     Delete a user
+// @Description Delete a user by their username
+// @Tags Users
+// @ID              delete-user
+// @Produce     json
+// @Param           username    path        string  true    "Username of the user to be deleted"
+// @Success     200         {object}    profiles.User
+// @Failure     404         "User not found"
+// @Router          /users/{username} [delete]
+func DeleteUser(w http.ResponseWriter, r *http.Request) {
+    color.Red("DELETE request received to delete a user")
+    w.Header().Set("Content-Type", "application/json")
+    params := mux.Vars(r)
+    username := params["username"]
+
+    if username != "Space Mommy" || username != "Space%20Mommy" {
+
+        for i, user := range profiles.Users {
+            if user.Username == username {
+                profiles.Users = append(profiles.Users[:i], profiles.Users[i+1:]...)
+                profiles.SaveUsers()
+                json.NewEncoder(w).Encode(user)
+                return
+            }
+        }
+    }
+
+    http.NotFound(w, r)
 }
 
 func Home(w http.ResponseWriter, r *http.Request) {
